--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <link href="https: //fonts.googleapis.com/css2?family= Sometype +Mono:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700 & display=swap" rel="stylesheet">
     </head>
     <body>
-        <header style="background-color:#28A8AA;color:black">
+        <header style="background-color:#28A8AA;color:black;display:flex;justify-content: center;
+  align-items: center;">
             <img src="https://s3-alpha.figma.com/profile/e0729631-5d0f-480e-8947-b9ee756e5dac"width="70">
             <div style="word-spacing:25px;text-align:center">
                 <a href="">ГЛАВНАЯ</a> 
